<resources>
    <string name="status_toast">Toast Status</string>
    <string name="app_name">ToDoList</string>
    <string name="list_title_activity">Your To Do List</string>
    <string name="list_title_label">Your Activity</string>
    <string name="list_desc_label">Your Description</string>
    <string name="create_title_activity">Create To Do</string>
    <string name="to_do_title_label">Activity To Do</string>
    <string name="to_do_description_label">Short Description</string>
    <string name="to_do_date_time_label">Date Time</string>
    <string name="save_label_btn">Save</string>
    <string name="cancel_label_btn">Cancel</string>
    <string name="edit_title_activity">Edit To Do List</string>
    <string name="delete_label_btn">delete</string>
    <string name="edit_label_btn">edit</string>
    <string name="delete_label">Are you sure to delete this?</string>
    <string name="ask_content_desc">ask_icon</string>
    <string name="yes_label_btn">Yes</string>
    <string name="email">\@example.com</string>
    <string name="logout">Logout</string>
    <string name="date_time">Date Time</string>
    <string name="description_label">Description</string>
    <string name="date_time_label">Date Time</string>
    <string name="edit_label">Edit</string>
    <string name="share_label">Share</string>
    <string name="register_label">REGISTER</string>
    <string name="password_konfirmasi_anda">Password Konfirmasi Anda</string>
    <string name="another_method_label">Atau Sign In dengan:</string>
    <string name="dont_have_account_label">Belum memiliki akun?</string>
    <string name="daftar_label">Daftar</string>
    <string name="login_label">LOGIN</string>
    <string name="password_anda_label">Password Anda</string>
    <string name="email_anda_label">Email Anda</string>
</resources>