<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"
        android:background="@drawable/rounded_corners_secondary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_label"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="25dp"
            android:background="@drawable/ic_help_outline_black_24dp"
            android:contentDescription="@string/ask_content_desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/cancel_label_btn"
                style="?android:borderlessButtonStyle"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:text="@string/yes_label_btn"
                style="?android:borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>