<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:id="@+id/layoutTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cbFinisihed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvTitleTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_title_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_desc_label" />
            <TextView
                android:id="@+id/tvDate"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_time" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbFinisihed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center_horizontal|center_vertical|center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FF3C3C3C"
        android:layout_marginHorizontal="2dp"
        android:layout_marginVertical="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTask"/>
</androidx.constraintlayout.widget.ConstraintLayout>